@@ -1,6 +1,6 @@
-AC_INIT([Conky],[1.3.5dev3.1],[brenden1@users.sourceforge.net])
+AC_INIT([Conky],[1.3.5],[brenden1@users.sourceforge.net])
 
-AM_INIT_AUTOMAKE(conky, 1.3.5dev3.1)
+AM_INIT_AUTOMAKE(conky, 1.3.5)
 AM_CONFIG_HEADER(src/config.h)
 AC_PROG_LIBTOOL
 
@@ -84,7 +84,7 @@ dnl
 
 want_bmpx=no
 AC_ARG_ENABLE(bmpx,
-	      [ --enable-bmpx		enable if you want BMPx support [[default=no]]],
+	      [  --enable-bmpx           enable if you want BMPx support [[default=no]]],
 	      [want_bmpx="$enableval"])
 
 AM_CONDITIONAL(BUILD_BMPX, test x$want_bmpx = xyes)
@@ -92,6 +92,10 @@ if test x$want_bmpx = xyes; then
 	PKG_CHECK_MODULES([DBUS], [dbus-1 >= 0.35 dbus-glib-1 >= 0.35])
 	CFLAGS="$CFLAGS $DBUS_CFLAGS"
 	LIBS="$LIBS $DBUS_LIBS"
+	AC_CHECK_HEADERS([bmpx/dbus.h], [], [BMPX_MISSING=yes])
+	if test "x$BMPX_MISSING" = xyes; then
+		AC_MSG_ERROR([bmpx doesn't seem to be installed, or the headers aren't available])
+	fi
 	AC_DEFINE(BMPX, 1, [Define if you want BMPx support])
 fi
 
