@@ -359,6 +359,30 @@ AC adapterstatus is on-line or charging (FreeBSD only)
 Remaining capacity in ACPI or APM battery. ACPI battery number can be given as argument (default is BAT0).
 
 .TP 
+\fBbmpx_artist\fR 
+Artist in current BMPx track
+
+.TP 
+\fBbmpx_album\fR 
+Album in current BMPx track
+
+.TP 
+\fBbmpx_title\fR 
+Title of the current BMPx track
+
+.TP 
+\fBbmpx_track\fR 
+Track number of the current BMPx track
+
+.TP 
+\fBbmpx_bitrate\fR 
+Bitrate of the current BMPx track
+
+.TP 
+\fBbmpx_uri\fR 
+URI of the current BMPx track
+
+.TP 
 \fBbuffers\fR 
 Amount of memory buffered
 
