@@ -1,5 +1,8 @@
 # $Id$
 
+2006-01-01
+	* Conky 1.3.5 released
+
 2005-12-31
 	* Fixed bug with use_xft causing ignorance of font selection (sf.net
 	bug 1387564)
@@ -20,8 +23,7 @@
 2005-11-30
 	* Fixed sf.net bugs 1369607, 1367735 and gentoo bug 113921, 
 	  all variations of the same array out of bounds issue.
-	* "Fixed" code in fs.c and conky.c to make fs stats match those displayed by df 
-          (affects reporting against ext3 filesystems only)
+	* "Fixed" code in fs.c and conky.c to make fs stats match those displayed by df (affects reporting against ext3 filesystems only)
 
 2005-11-27 
 	* new code in linux.c and top.c to calculate CPU % correctly on 2.6 kernels.
